--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -135,7 +135,7 @@ jobs:
             --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
             --build-arg COMMIT_ID='${{ github.sha }}'                           \
             --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
-            --tag "jsii/superchain:node${{ matrix.node }}"                      \
+            --tag "jsii/superchain:node${{ matrix.node }}-buster-slim"          \
             -f superchain/Dockerfile                                            \
               .
 
@@ -150,7 +150,7 @@ jobs:
               --build-arg BUILD_TIMESTAMP="${{ steps.build-time.outputs.value }}" \
               --build-arg COMMIT_ID='${{ github.sha }}'                           \
               --build-arg NODE_MAJOR_VERSION=${{ matrix.node }}                   \
-              --tag "jsii/superchain:latest"                                      \
+              --tag "jsii/superchain:latest-buster-slim"                          \
               -f superchain/Dockerfile                                            \
               .
           fi
